--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,11 @@
               }
             ],
             "styles": [
+            
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+          ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -97,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
